# denoffi

./: .gitignore  Cargo.toml  README.md  libadd.dylib  mod.js  mod.ts  test.ts  types.ts  types_test.ts  utils.ts
.github/workflows/: ci.yml
example/: Cargo.toml
example/src/: lib.rs
src/: error.rs  ffi.rs  ffi.txt  lib.rs
