[package]
name = "deno_plugin_ffi"
version = "0.1.0"
authors = ["justjavac <justjavac@gmail.com>"]
edition = "2018"
description = "Deno Foreign Function Interface."
readme = "README.md"
repository = "https://github.com/justjavac/deno_plugin_ffi"
license = "MIT"
keywords = ["deno", "deno_plugin", "ffi"]

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.4.3"
deno_core = "0.81.0"
dlopen = "0.1.8"
futures = "0.3.13"
libc = "0.2.90"
libffi = "1.0.0"
libffi-sys = "1.1.0"
num-derive = "0.3.3"
num-traits = "0.2.14"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"